feat(stats): GET /fizzbuzz/stats
- Add stats package to gather and retrieve hits on provided keys
- Use stats.Gatherer in FizzBuzz handler to notify parameters's hits
- Use stats.Gatherer to respond with top 100 hits in FizzBuzzStats
handler
