# docs/swagger/swagger.json
@@ -83,6 +83,32 @@
                 }
             }
         },
+        "/fizzbuzz/stats": {
+            "get": {
+                "description": "Get the 100 most used parameters on GET /fizbuzz route.",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "fizzbuzz"
+                ],
+                "summary": "Top 100 /fizzbuzz parameters.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/stats.Count"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/mon/ping": {
             "get": {
                 "description": "get the status of server.",
@@ -126,6 +152,17 @@
                     "type": "string"
                 },
                 "message": {
+                    "type": "string"
+                }
+            }
+        },
+        "stats.Count": {
+            "type": "object",
+            "properties": {
+                "hit": {
+                    "type": "integer"
+                },
+                "key": {
                     "type": "string"
                 }
             }
